// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user module should create user execute request 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Object {
        "action": Object {
          "payload": Object {
            "test": true,
          },
          "type": "users/currentUser/CREATE_CURRENT_USER",
        },
        "crudOptions": Object {
          "onSuccess": [Function],
          "operationId": "usersCreate",
        },
        "meta": undefined,
        "parameters": Object {
          "body": Object {
            "test": true,
          },
        },
        "types": Array [
          "users/currentUser/CREATE_CURRENT_USER_REQUEST",
          "users/currentUser/CREATE_CURRENT_USER_SUCCESS",
          "users/currentUser/CREATE_CURRENT_USER_FAILURE",
        ],
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`user module should delete user execute request 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Object {
        "action": Object {
          "payload": undefined,
          "type": "users/currentUser/DELETE_CURRENT_USER",
        },
        "crudOptions": Object {
          "onSuccess": [Function],
          "operationId": "currentUserDelete",
        },
        "meta": undefined,
        "parameters": undefined,
        "types": Array [
          "users/currentUser/DELETE_CURRENT_USER_REQUEST",
          "users/currentUser/DELETE_CURRENT_USER_SUCCESS",
          "users/currentUser/DELETE_CURRENT_USER_FAILURE",
        ],
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`user module should request user execute request 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Object {
        "action": Object {
          "payload": undefined,
          "type": "users/currentUser/REQUEST_CURRENT_USER",
        },
        "crudOptions": Object {
          "onFailure": [Function],
          "operationId": "currentUserGet",
        },
        "meta": undefined,
        "parameters": undefined,
        "types": Array [
          "users/currentUser/REQUEST_CURRENT_USER_REQUEST",
          "users/currentUser/REQUEST_CURRENT_USER_SUCCESS",
          "users/currentUser/REQUEST_CURRENT_USER_FAILURE",
        ],
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`user module should update user execute request 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      Object {
        "action": Object {
          "payload": Object {
            "test": true,
          },
          "type": "users/currentUser/UPDATE_CURRENT_USER",
        },
        "crudOptions": Object {
          "onSuccess": [Function],
          "operationId": "currentUserUpdate",
        },
        "meta": undefined,
        "parameters": Object {
          "body": Object {
            "test": true,
          },
        },
        "types": Array [
          "users/currentUser/UPDATE_CURRENT_USER_REQUEST",
          "users/currentUser/UPDATE_CURRENT_USER_SUCCESS",
          "users/currentUser/UPDATE_CURRENT_USER_FAILURE",
        ],
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;
